--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Mrsbutton13/authenticat_me#readme",
   "dependencies": {
+    "react-animations": "^1.0.0",
     "react-scroll-motion": "^0.2.1"
   }
 }
