--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/Mrsbutton13/authenticat_me#readme",
   "dependencies": {
+    "aws-sdk": "^2.853.0",
+    "body-parser": "^1.19.0",
+    "multer": "^1.4.2",
     "react-animations": "^1.0.0",
     "react-scroll-motion": "^0.2.1"
   }
