--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,32 @@
 {
-  "name": "authenticate-me",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "dependencies": {
+    "aws-sdk": "^2.931.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^10.0.0",
+    "dotenv-cli": "^4.0.0",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "express-validator": "^6.12.0",
+    "faker": "^5.5.3",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "nodemon": "^2.0.7",
+    "per-env": "^1.0.2",
+    "pg": "^8.6.0",
+    "sequelize": "^5.22.4",
+    "sequelize-cli": "^5.5.1"
+  },
   "scripts": {
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
@@ -12,27 +36,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "express-validator": "^6.9.2",
-    "faker": "^5.4.0",
-    "helmet": "^4.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "per-env": "^1.0.2",
-    "pg": "^8.5.1",
-    "sequelize": "^5.22.3",
-    "sequelize-cli": "^5.5.1"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^4.0.0",
-    "nodemon": "^2.0.7"
-  }
+  "license": "ISC"
 }
